--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "framer-motion": "^11.11.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "next": "^14.2.14",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "20",
