--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "build": "^0.1.4",
     "framer-motion": "^11.11.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "next": "^14.2.14",
     "react": "18",
     "react-dom": "18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "vercel": "^37.6.1"
   },
   "devDependencies": {
     "@types/node": "20",
