--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18",
     "react-dom": "18",
     "react-icons": "^5.3.0",
+    "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
     "vercel": "^37.6.1"
   },
